# pizza

./: .gitignore  CMakeLists.txt  LICENSE  example.h
args/: args.cc  args.h
engine/: engine.cc  engine.h  igame.h
event/: eventdata.cc  eventdata.h  ievent.h  sdlevent.cc  sdlevent.h
include/: color.h  debug.h
include/gl/: gl_headers.h
log/: ilog.h  termlog.cc  termlog.h
math/: math.h  matrix.cc  matrix.h  vec3.cc  vec3.h  vec4.cc  vec4.h
mcomp/: eventprocessor.h  main.cc  mcomp.cc  mcomp.h
net/: client.cc  main.cc  server.cc
proto/: Makefile  data.pb.cc  data.pb.h  data.proto
render/: glrender.cc  glrender.h  glrender_camera.cc  glrender_mesh.cc  glrender_shader.cc  imodel.h  irender.cc  irender.h  model.cc  model.h
res/: Cube.dae  basic.frag  basic.vert  default.frag  default.vert  glow.frag  glow.vert  highlight.frag  highlight.vert  skinned_pillar.dae  sphere_flat.dae  sphere_smooth.dae  thing.dae
timer/: appletimer.cc  appletimer.h  itimer.h  linuxtimer.cc  linuxtimer.h  timer.cc  timer.h
window/: iwindow.h  sdlwindow.cc  sdlwindow.h
